force build on Travis

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,8 +1,6 @@
 FROM alpine:latest
 LABEL maintainer=matthew.dodkins@chelonia.co.uk
 
-ADD install.sh /
-RUN /install.sh && \
-    rm -f /install.sh
-
+COPY install.sh /
+RUN /install.sh
 COPY red_amber_green.rb /usr/local/bin
