--- a/start_point/manifest.json
+++ b/start_point/manifest.json
@@ -9,7 +9,5 @@
 
   "image_name": "cyberdojofoundation/freepascal_assert",
 
-  "filename_extension": [ ".pas" ],
-
-  "runner_choice": "stateless"
+  "filename_extension": [ ".pas" ]
 }
