Update Dockerfile.base now there is a base pascal repo

--- a/docker/Dockerfile.base
+++ b/docker/Dockerfile.base
@@ -1,6 +1,4 @@
-FROM alpine:latest
+FROM cyberdojofoundation/freepascal
 LABEL maintainer=matthew.dodkins@chelonia.co.uk
 
-COPY install.sh .
-RUN ./install.sh
 COPY red_amber_green.rb /usr/local/bin
