Updates ready for forthcoming changes

--- a/start_point/manifest.json
+++ b/start_point/manifest.json
@@ -1,13 +1,13 @@
 {
   "display_name": "Pascal (FreePascal), assert",
-
-  "visible_filenames": [
+  "image_name": "cyberdojofoundation/freepascal_assert",
+  "visible_filenames":
+  [
      "hiker.tests.pas",
      "hiker.pas",
      "cyber-dojo.sh"
   ],
-
-  "image_name": "cyberdojofoundation/freepascal_assert",
-
-  "filename_extension": [ ".pas" ]
+  "filename_extension": [ ".pas" ],
+  "max_seconds": 10,
+  "tab_size": 4
 }
