--- a/docker/Dockerfile.base
+++ b/docker/Dockerfile.base
@@ -1,4 +1,4 @@
-FROM cyberdojofoundation/freepascal
+FROM cyberdojofoundation/freepascal:5550730
 LABEL maintainer=matthew.dodkins@chelonia.co.uk
 
 COPY red_amber_green.rb /usr/local/bin
